# hf_cubature

./: README.md  pyproject.toml
basis/: __init__.py  gaussian.py  sto.py
cubature/: domains.py  integrator.py  rules.py
examples/: run_h2_minimal.py  run_h2_pyscf.py  run_h2_scf.py
hartree_fock/: basis.py  hf.py
integrals/: __init__.py  eri.py  kinetic.py  nuclear.py  overlap.py
scripts/: plot_convergence_contracted.py  plot_eri_convergence.py  plot_kinetic_convergence.py  plot_nuclear_convergence.py  plot_sto_convergence.py
symbolic/: check_kinetic.py  check_nuclear.py  check_overlap.py  gto_formulas.py  nuclear_reference.py  scf.py  sto_formulas.py  sto_kinetic.py  sto_overlap.py
system/: molecule.py
tests/: test_basics.py  test_contracted.py  test_cubature.py  test_eri.py  test_kinetic.py  test_nuclear.py  test_overlap.py  test_sto.py  test_tensor_product_rule.py
