[project]
name = "hf-cubature"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Dewing",email = "markdewing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "hf_cubature", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
